@@ -2,33 +2,38 @@ package ru.skypro.homework.service.impl;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.http.MediaType;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.core.userdetails.UserDetails;
+import org.springframework.security.core.userdetails.UserDetailsService;
+import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
-import org.springframework.util.StringUtils;
 import org.springframework.web.multipart.MultipartFile;
 import ru.skypro.homework.dto.*;
 import ru.skypro.homework.entity.User;
-import ru.skypro.homework.model.Image;
+import ru.skypro.homework.model.UserPrincipal;
 import ru.skypro.homework.repository.UserRepository;
+import ru.skypro.homework.service.ImageService;
 import ru.skypro.homework.service.UserService;
-import java.io.IOException;
-import java.io.OutputStream;
-import java.nio.file.Files;
+
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Objects;
-import java.util.UUID;
+import java.util.Optional;
 
 @Service
-public class UserServiceImpl implements UserService {
+public class UserServiceImpl implements UserService, UserDetailsService {
 
     private final Logger logger = LoggerFactory.getLogger(User.class);
-    @Value("${path.to.data.file}")
-    private String pathToImage;
+//    @Value("${path.to.data.file.images}")
+//    private String pathToImage;
     private final UserRepository userRepository;
+    @Autowired
+    ImageService imageService;
 
-    private final String imagePrefix = "/users/image?path=/";
+    private final String imagePrefix = "/users/image?id=";
 
     public UserServiceImpl(UserRepository userRepository) {
         this.userRepository = userRepository;
@@ -56,57 +61,44 @@ public class UserServiceImpl implements UserService {
     }
 
     @Override
+    public UserDTO getUser(String username) {
+        return mapToUserDTO(userRepository.getUserByUsername(username));
+    }
+
+    @Override
+    public Optional<User> getUser() {
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        return userRepository.findByUsername(authentication.getName());
+    }
+
+    @Override
     public UpdateUserDTO updateUser(String newFirstName, String newLastName, String newPhone) {
         return new UpdateUserDTO(newFirstName, newLastName, newPhone);
     }
 
+    /**
+     * Update user avatar
+     *
+     * @param username current user
+     * @param image    new avatar
+     * @return UUID
+     */
     @Override
     public String updateUserImage(MultipartFile image, String username) {
-
-// TODO: Вынести работу с картинками в отдельный класс
-
-        String uuid = UUID.randomUUID() + "." +
-                StringUtils.getFilenameExtension(image.getOriginalFilename());
-        Path path = Paths.get(pathToImage, uuid);
-        try (OutputStream os = Files.newOutputStream(path)) {
-            os.write(image.getBytes());
-        } catch (IOException e) {
-            logger.warn("WARN! Failed to upload file '{}' to the repository at '{}'", image.getOriginalFilename(), pathToImage);
-            throw new RuntimeException(e);
-        }
-
-        User user = userRepository.getUserByUsername(username);
-
-        user.setImage(String.valueOf(path));
-        userRepository.save(user);
-        return path.toString();
-    }
-
-
-
-
-    @Override
-    public Image getImage(String pathToImage) {
-        Image image = new Image();
-        try {
-            switch (Objects.requireNonNull(StringUtils.getFilenameExtension(pathToImage))) {
-                case "png":
-                    image.setMediaType(MediaType.IMAGE_PNG);
-                    image.setBytes(Files.readAllBytes(Path.of(pathToImage)));
-                    break;
-                case "jpg":
-                    image.setMediaType(MediaType.IMAGE_JPEG);
-                    image.setBytes(Files.readAllBytes(Path.of(pathToImage)));
-                    break;
-            }
-            return image;
-        } catch (IOException e) {
-            throw new RuntimeException(e);
+        Optional<User> entity = userRepository.findByUsername(username);
+        if (entity.isPresent()) {
+            imageService.deleteImage(entity.get().getImage());
+            Path path = Paths.get(imageService.saveImage(image));
+            entity.get().setImage(path.toString());
+            userRepository.save(entity.get());
+            return path.toString();
+        } else {
+            logger.info("Not found User with username: {}", username);
+            return null;
         }
     }
 
-
-        private User mapToUserFromUserDTO(UserDTO userDTO, String password, Role role) {
+    private User mapToUserFromUserDTO(UserDTO userDTO, String password, Role role) {
         User user = new User();
 
         user.setId(userDTO.getId());
@@ -116,8 +108,8 @@ public class UserServiceImpl implements UserService {
         user.setLastName(userDTO.getLastName());
         user.setPhone(userDTO.getPhone());
         user.setRole(role);
-        if (user.getImage() != null && !user.getImage().isBlank()) {
-            user.setImage(imagePrefix + userDTO.getImage().replace("\\", "/"));
+        if (userDTO.getImage() != null && !userDTO.getImage().isBlank()) {
+            user.setImage(userDTO.getImage());
         }
 
         return user;
@@ -134,10 +126,7 @@ public class UserServiceImpl implements UserService {
         user.setLastName(updateUserDTO.getLastName());
         user.setPhone(user.getPhone());
         user.setRole(role);
-        if (user.getImage() != null && !user.getImage().isBlank()) {
-            user.setImage(imagePrefix + image.replace("\\", "/"));
-        }
-
+        user.setImage(image);
         return user;
     }
 
@@ -150,9 +139,11 @@ public class UserServiceImpl implements UserService {
         userDTO.setLastName(user.getLastName());
         userDTO.setPhone(user.getPhone());
         if (user.getImage() != null && !user.getImage().isBlank()) {
-            userDTO.setImage(imagePrefix + user.getImage().replace("\\", "/"));
+            //TODO : заменить
+//            userDTO.setImage(imagePrefix + user.getImage().replace("\\", "/"));
+            userDTO.setImage(imagePrefix + user.getImage());
         }
-
+        userDTO.setRole(user.getRole());
         return userDTO;
     }
 
@@ -181,4 +172,29 @@ public class UserServiceImpl implements UserService {
         userRepository.save(user);
         return user;
     }
+
+    @Override
+    public UserAuthDTO mapToUserAuthDTO(User user) {
+        return new UserAuthDTO(
+                user.getId(),
+                user.getUsername(),
+                user.getPassword(),
+                user.getRole()
+        );
+    }
+
+    @Override
+    public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
+        User user = userRepository.getUserByUsername(username);
+        if (user == null) {
+            throw new UsernameNotFoundException(username);
+        }
+        return new UserPrincipal(mapToUserAuthDTO(user));
+    }
+
+    @Override
+    public boolean userExists(String username) {
+        return Objects.nonNull(userRepository.getUserByUsername(username));
+    }
+
 }
